@@ -80,6 +80,39 @@ this repository contains the full copyright notices and license terms. -->
             sequence="50"
             id="menu_view_tree_width"/>
 
+        <record model="ir.ui.view" id="view_tree_optional_view_form">
+            <field name="model">ir.ui.view_tree_optional</field>
+            <field name="type">form</field>
+            <field name="name">ui_view_tree_optional_form</field>
+        </record>
+
+        <record model="ir.ui.view" id="view_tree_optional_view_tree">
+            <field name="model">ir.ui.view_tree_optional</field>
+            <field name="type">tree</field>
+            <field name="name">ui_view_tree_optional_list</field>
+        </record>
+
+        <record model="ir.action.act_window" id="act_view_tree_optional_form">
+            <field name="name">View Tree Optional</field>
+            <field name="res_model">ir.ui.view_tree_optional</field>
+        </record>
+        <record model="ir.action.act_window.view" id="act_view_tree_optional_form_view1">
+            <field name="sequence" eval="10"/>
+            <field name="view" ref="view_tree_optional_view_tree"/>
+            <field name="act_window" ref="act_view_tree_optional_form"/>
+        </record>
+        <record model="ir.action.act_window.view" id="act_view_tree_optional_form_view2">
+            <field name="sequence" eval="20"/>
+            <field name="view" ref="view_tree_optional_view_form"/>
+            <field name="act_window" ref="act_view_tree_optional_form"/>
+        </record>
+
+        <menuitem
+            parent="menu_ui"
+            action="act_view_tree_optional_form"
+            sequence="50"
+            id="menu_view_tree_optional"/>
+
         <record model="ir.ui.view" id="view_tree_state_form">
             <field name="model">ir.ui.view_tree_state</field> 
             <field name="type">form</field>
