@@ -4,12 +4,12 @@ this repository contains the full copyright notices and license terms. -->
 <tree editable="1">
     <field name="resource" expand="2"/>
     <field name="name" expand="2"/>
-    <field name="summary" expand="1"/>
-    <field name="last_user" expand="1"/>
-    <field name="last_modification" widget="date"/>
-    <field name="last_modification" widget="time"
+    <field name="summary" expand="1" optional="1"/>
+    <field name="last_user" expand="1" optional="1"/>
+    <field name="last_modification" widget="date" optional="1"/>
+    <field name="last_modification" widget="time" optional="1"
         string="Last Modification Time"/>
-    <field name="type"/>
+    <field name="type" optional="1"/>
     <field name="data"/>
     <field name="link" widget="url" expand="1"/>
     <!-- To allow client to set description field -->
