@@ -3,8 +3,8 @@
 this repository contains the full copyright notices and license terms. -->
 <tree>
     <field name="method" expand="1"/>
-    <field name="next_call" widget="date"/>
-    <field name="next_call" widget="time"/>
+    <field name="next_call" widget="date" optional="1"/>
+    <field name="next_call" widget="time" optional="1"/>
     <field name="interval_number"/>
     <field name="interval_type"/>
     <button name="run_once" string="Run Once" tree_invisible="1"/>
