@@ -2,10 +2,10 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree>
-    <field name="module"/>
+    <field name="module" optional="0"/>
     <field name="model" expand="1"/>
     <field name="fs_id" expand="1"/>
-    <field name="db_id"/>
+    <field name="db_id" optional="1"/>
     <field name="noupdate"/>
     <field name="out_of_sync"/>
     <button name="sync"/>
