@@ -4,9 +4,9 @@ this repository contains the full copyright notices and license terms. -->
 <tree>
     <field name="name" expand="2"/>
     <field name="model" expand="1"/>
-    <field name="ttype"/>
-    <field name="relation" expand="1"/>
-    <field name="field_description" expand="1"/>
-    <field name="access"/>
-    <field name="module"/>
+    <field name="ttype" optional="0"/>
+    <field name="relation" expand="1" optional="1"/>
+    <field name="field_description" expand="1" optional="0"/>
+    <field name="access" optional="1"/>
+    <field name="module" optional="0"/>
 </tree>
