@@ -4,7 +4,7 @@ this repository contains the full copyright notices and license terms. -->
 <tree>
     <field name="name" expand="2"/>
     <field name="model" expand="1"/>
-    <field name="info" expand="1"/>
+    <field name="info" expand="1" optional="1"/>
     <field name="global_search_p"/>
-    <field name="module"/>
+    <field name="module" optional="0"/>
 </tree>
