@@ -3,6 +3,6 @@
 this repository contains the full copyright notices and license terms. -->
 <tree editable="1">
     <field name="action" expand="1"/>
-    <field name="sequence"/>
+    <field name="sequence" optional="1"/>
     <field name="state"/>
 </tree>
