@@ -3,7 +3,7 @@
 this repository contains the full copyright notices and license terms. -->
 <tree on_write="on_write">
     <field name="name" expand="1"/>
-    <field name="version"/>
+    <field name="version" optional="1"/>
     <field name="state"/>
     <button string="Mark for Upgrade" name="upgrade"/>
     <button string="Mark for Activation" name="activate"/>
