@@ -4,8 +4,8 @@ this repository contains the full copyright notices and license terms. -->
 <tree>
     <field name="unread"/>
     <field name="resource" expand="1"/>
-    <field name="last_user" string="User" expand="1"/>
-    <field name="last_modification" widget="date" string="Date"/>
-    <field name="last_modification" widget="time" string="Time"/>
+    <field name="last_user" string="User" expand="1" optional="1"/>
+    <field name="last_modification" widget="date" string="Date" optional="1"/>
+    <field name="last_modification" widget="time" string="Time" optional="1"/>
     <field name="message_wrapped" expand="2"/>
 </tree>
