@@ -2,10 +2,10 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree>
-    <field name="priority"/>
+    <field name="priority" optional="1"/>
     <field name="model" expand="2"/>
     <field name="type"/>
-    <field name="inherit" expand="1"/>
-    <field name="domain" expand="1"/>
-    <field name="field_childs"/>
+    <field name="inherit" expand="1" optional="0"/>
+    <field name="domain" expand="1" optional="1"/>
+    <field name="field_childs" optional="1"/>
 </tree>
