@@ -1,0 +1,14 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<form>
+    <label name="view_id"/>
+    <field name="view_id"/>
+    <label name="user"/>
+    <field name="user"/>
+
+    <label name="field"/>
+    <field name="field"/>
+    <label name="value"/>
+    <field name="value"/>
+</form>
