@@ -1,8 +1,9 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<tree sequence="sequence">
-    <field name="name" icon="name" expand="2"/>
-    <field name="module" optional="0"/>
-    <field name="path" expand="1" optional="1"/>
+<tree>
+    <field name="view_id" expand="1"/>
+    <field name="user" expand="1"/>
+    <field name="field" expand="1"/>
+    <field name="value"/>
 </tree>
