@@ -1,3 +1,4 @@
+* Add optional column on tree view
 * Use dictionary as domain on Reference field
 * Include model, field and column in import data error message
 * Support limit and offset to ModelSQL count search and search_count
